Fix in row from main-container, it should not have any margins in order to not show scrollbar at bottom.

--- a/src/sass/modules/trends.scss
+++ b/src/sass/modules/trends.scss
@@ -2,6 +2,7 @@
   height: 100%;
 }
 .main-region-container > .row {
+  margin: 0;
   height: 100%;
   .cell {
     position: relative;
